--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,22 @@ ul{
   font-weight: 700;
   margin-bottom: 5px;
 }
+
+.blockquote{
+  padding: 128px 10px 144px;
+  background-image: url(../images/blockquote.jpg);
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 150px;
+}
+
+.blockquote__text{
+  max-width: 670px;
+  margin: 0 auto;
+  font-size: 42px;
+  line-height: 57px;
+  color: #fff;
+}
+
