--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,85 @@ ul{
   color: #fff;
 }
 
+.clients{
+  margin-bottom: 150px;
+}
+
+.clients-slider__box{
+  display: flex;
+}
+
+.clients-slider__box-img{
+  flex-basis: 510px;
+  margin-right: 90px;
+  margin-bottom: 30px;
+}
+
+.clients-slider__box-title{
+  max-width: 478px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.clients-slider__box-list{
+  margin-left: 50px;
+  margin-bottom: 50px;
+}
+
+.clients-slider__box-item{
+  margin-bottom: 15px;
+}
+
+.slick-arrow path{
+  transition: fill .5s ease-in;
+}
+
+.slick-arrow:hover path{
+  fill: #A9A32A;
+}
+
+.step{
+  margin-bottom: 150px;
+}
+
+.step__inner{
+  display: flex;
+}
+
+.step__img{
+  flex-basis: 600px;
+  object-fit: cover;
+}
+
+.step__content{
+  margin-right: 90px;
+}
+
+.step__list{
+  list-style: none;
+  counter-reset: number;
+}
+
+.step__list-item{
+  counter-increment: number;
+  margin-bottom: 30px;
+}
+
+.step__list-item::before{
+  content: '0' counter(number);
+  margin-bottom: 11px;
+  color: #868585;
+}
+
+.step__list-item:nth-child(n+10)::before{
+  content: counter(number);
+}
+
+.step__list-title{
+  margin-bottom: 2px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 700;
+}
